# rusterizer

./: Cargo.toml  LICENSE.txt  README.md  notes.txt
src/: camera.rs  color.rs  graphics_primitives.rs  main.rs  math_primitives.rs  mesh.rs  rasterizer.rs  render.rs  texture.rs  uniform.rs
src/container/: fixed_vec.rs  mod.rs
src/math/: matrix.rs  mod.rs  point.rs  transform.rs  vector.rs
src/rasterizer/: bounding_box.rs  buffers.rs  clipping.rs  mod.rs
