[package]
name = "rusterizer"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.13.0" # Minimal crate for window + frame buffer creation
png = "0.16.2"
