[package]
name = "rusterizer"
version = "0.1.0"
authors = ["Niklas Jonsson <niklasandersjonsson@gmail.com>"]
edition = "2018"

[dependencies]
minifb = "0.16.0" # Minimal crate for window + frame buffer creation
png = "0.16.2" # For loading textures
bitvec = "0.17.4"


[profile.release]
debug = true
